# systemd-boot-friend-rs

./: Cargo.toml  LICENSE  README.md  build.rs  install-assets.sh
completions/: _sbf  _systemd-boot-friend  _systemd-boot-friend-rs  sbf.bash  sbf.fish  systemd-boot-friend-rs.bash  systemd-boot-friend-rs.fish  systemd-boot-friend.bash  systemd-boot-friend.fish
i18n/en-US/: systemd_boot_friend_rs.ftl
i18n/zh-CN/: systemd_boot_friend_rs.ftl
i18n/zh-TW/: systemd_boot_friend_rs.ftl
src/: cli.rs  config.rs  i18n.rs  kernel.pest  kernel.rs  kernel_manager.rs  macros.rs  main.rs  parser.rs  util.rs
src/kernel/: generic_kernel.rs  mod.rs
src/version/: generic_version.rs  mod.rs
templates/: entry.stpl
