[package]
name = "systemd-boot-friend-rs"
version = "0.21.1"
license = "MIT"
authors = ["Kaiyang Wu <origincode@aosc.io>"]
edition = "2018"
description = "Kernel version manager for systemd-boot"
repository = "https://github.com/AOSC-Dev/systemd-boot-friend-rs"
homepage = "https://github.com/AOSC-Dev/systemd-boot-friend-rs"
readme = "README.md"

[[bin]]
name = "systemd-boot-friend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
textwrap = "0.15"
lazy_static = "1.4"
regex = "1.5"
nom = "7.1"
libsdbootconf = "0.10"
same-file = "1"
# i18n
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6"
rust-embed = "6.3"
unic-langid = "0.9"

[build-dependencies]
clap = "3.1"
clap_complete = "3.1"

[profile.release]
lto = true
